<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01000000"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:weightSum="10"
            android:background="@drawable/shape_register_eidt"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="left|center"
                android:src="@drawable/phone"/>
            <EditText
                android:id="@+id/et_Tel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/Hint1"
                android:layout_weight="10"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:nextFocusForward="@+id/et_express_receiver_address"
                android:textColor="#FFFFFF"
                android:textColorHint="#D1D1D1" />

            <TextView
                android:id="@+id/tv_getCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/GetVerCode"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:weightSum="10"
            android:background="@drawable/shape_register_eidt"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="left|center"
                android:src="@drawable/password"/>

            <EditText
                android:id="@+id/ed_code"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="9.03"
                android:hint="@string/hint3"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="number"
                android:nextFocusForward="@+id/et_express_receiver_address"
                android:textColor="#FFFFFF"
                android:textColorHint="#D1D1D1" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/shape_register_eidt"
            android:gravity="center"
            android:text="@string/Register"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
