<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/shape_register_eidt"
            android:weightSum="10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginLeft="20dp"
                android:src="@drawable/name" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="9.03"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusForward="@+id/et_express_receiver_address"
                android:textColor="#FFFFFF"
                android:textColorHint="#D1D1D1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:background="@drawable/shape_register_eidt"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="left|center"
                android:src="@drawable/password"/>

            <EditText
                android:id="@+id/user_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="9.03"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:layout_marginLeft="10dp"
                android:maxLines="1"
                android:inputType="numberPassword"
                android:nextFocusForward="@+id/et_express_receiver_address"
                android:textColor="#FFFFFF"
                android:textColorHint="#D1D1D1" />
        </LinearLayout>


        <CheckBox
            android:id="@+id/cb_rem"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="20dp"
            android:text="@string/remember"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_register_eidt"
            android:gravity="center"
            android:text="登陆"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bt_register1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_register_eidt"
            android:gravity="center"
            android:text="账号注册"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:text="-- 第三方登陆 --"
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="top|center">

        <ImageView
            android:id="@+id/qq_login"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:src="@drawable/qq_login1"
            />

        <ImageView
            android:id="@+id/weichat_login"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/wechat_login" />
    </LinearLayout>

</LinearLayout>
