<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:suspend="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:scrollbars="none"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <cn.bingoogolapple.bgabanner.BGABanner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/shape_eidt"
            app:banner_pageChangeDuration="1000"
            app:banner_pointAutoPlayAble="true"
            app:banner_pointContainerBackground="@android:color/transparent"
            app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
            app:banner_transitionEffect="cube" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/class_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:src="@drawable/myclass" />

            <TextView
                android:id="@+id/class_party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_eidt"
                android:gravity="center"
                android:text="班级联谊"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="2dp"
                android:background="@drawable/shape_button"
                android:text="查看详情" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/shape_eidt">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/class_bg" />

            <TextView
                android:id="@+id/class_summary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/ClassSumarry"

                android:textSize="20sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="2dp"
                android:background="@drawable/shape_button"
                android:text="查看详情" />

            <ImageView
                android:id="@+id/assn_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:src="@drawable/assn" />

            <TextView
                android:id="@+id/assn_party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_eidt"
                android:gravity="center"
                android:text="社团聚会"
                android:textSize="40sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/shape_eidt">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="113dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/assn_bg" />

            <TextView
                android:id="@+id/assn_summary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/AssnSumarry"
                android:textSize="20sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="2dp"
                android:background="@drawable/shape_button"
                android:text="查看详情" />

            <ImageView
                android:id="@+id/personal_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:src="@drawable/personal" />

            <TextView
                android:id="@+id/personal_party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_eidt"
                android:gravity="center"
                android:text="个人交友"
                android:textSize="40sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/shape_eidt">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="113dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/personal_bg" />

            <TextView
                android:id="@+id/personal_summary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/PersonalSumarry"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

